<resources>
    <string name="app_name">Anime Recommender</string>
    <string name="recently_added">Recently Added</string>
    <string name="see_all"><![CDATA[See All >]]></string>
    <string name="genres">Genres</string>
    <string name="screenshots">Screenshots</string>
    <string name="anime_description">Anime Description</string>
    <string name="year">year</string>
    <string name="country">Country</string>
    <string name="animename">animeName</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="length">Length</string>
</resources>